# django-gitstorage

./: .coveragerc  .gitignore  .pylintrc  MANIFEST.in  Makefile  README.rst  README.txt  manage_dev.py  requirements.txt  setup.cfg  setup.py
gitstorage/: __init__.py  admin.py  apps.py  conf.py  factories.py  forms.py  mimetypes.py  models.py  repository.py  storage.py  utils.py  validators.py  views.py  wrappers.py
gitstorage/management/commands/: sync_blobmetadata.py  sync_blobs.py
gitstorage/migrations/: 0001_initial.py  0002_auto_20151224_1549.py  0002_auto_20170527_1215.py  0002_auto__del_field_blobmetadata_oid__add_field_blobmetadata_id.py  0003_auto_20151225_1807.py  0003_auto_20190722_1427.py  0004_auto_20151230_1123.py  0004_auto_20200921_1520.py  0005_auto_20151230_1123.py  0006_auto_20151230_1128.py
gitstorage/tests/: factories.py  test_admin.py  test_commands.py  test_factories.py  test_forms.py  test_mimetypes.py  test_models.py  test_storage.py  test_utils.py  test_validators.py  test_views.py  utils.py  views.py
gitstorage_dev/: settings.py  urls.py
gitstorage_dev/templates/: base.html
gitstorage_dev/tests/: test_admin.py  test_commands.py  test_factories.py  test_forms.py  test_mimetypes.py  test_models.py  test_storage.py  test_utils.py  test_validators.py  test_views.py  utils.py  views.py
hooks/: update
requirements/: dev.txt
tests/: test_admin.py  test_commands.py  test_factories.py  test_forms.py  test_mimetypes.py  test_models.py  test_utils.py  test_validators.py  test_views.py
tests/project/: settings.py  urls.py  views.py
(+6 files in other folders)
