[metadata]
name = django-gitstorage
version = 0.0.1
author = Bors LTD
author_email = github@bors-ltd.fr
description = A Django application to browse a Git repository and build Web applications on top of it
long_description = file: README.rst
license = AGPL-3.0
classifiers =
    Development Status :: 4 - Beta
    Operating System :: OS Independent
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Django Modules

[options]
zip_safe = true
include_package_data = True
packages = find:
setup_requires =
    setuptools
install_requires =
    Django>=2.2
    pygit2>=0.28.0
    django-appconf
    django-sendfile @ https://github.com/jdufresne/django-sendfile.git@django-111

[options.extras_require]
dev =
    coverage
    docutils
    factory_boy
    pylint
